After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710689 - At-spi2-core 3.10 crashing with SIGSEGV in register_client.
At-spi2-core 3.10 crashing with SIGSEGV in register_client.
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other Linux
: Normal normal
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-22 23:59 UTC by Luke Yelavich
Modified: 2013-10-23 15:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Threaded stack trace. (2.69 KB, text/plain)
2013-10-22 23:59 UTC, Luke Yelavich
Details

Description Luke Yelavich 2013-10-22 23:59:10 UTC
Created attachment 257886 [details]
Threaded stack trace.

Original launchpad bug: https://bugs.launchpad.net/ubuntu/+source/at-spi2-core/+bug/1037357
No informatino given beyond the crash. Attached is a threaded stack trace.
Comment 1 Mike Gorse 2013-10-23 15:22:55 UTC
Just pushed commit 87e41f (trunk) and c86bd8 (gnome-3-10).

Hopefully that fixes the crash, although I'm not sure why that call would return without an error, so there might still be some other underlying problem.